fix z-index, use color constants

--- a/src/sass/app_2/_common/base/common.scss
+++ b/src/sass/app_2/_common/base/common.scss
@@ -14,7 +14,7 @@ select, input, textarea {
     font-weight: inherit;
     font-style: inherit;
     padding: 2px 3px;
-    border: 1px solid $COLOR_LIGHT_GRAY;
+    border: 1px solid $COLOR_GRAY;
     border-radius: $BORDER_RADIUS;
 }
 
