--- a/src/sass/app_2/pages/statement.scss
+++ b/src/sass/app_2/pages/statement.scss
@@ -4,7 +4,7 @@ $filter-height: 60px;
     box-sizing: border-box;
     height: $filter-height;
     position: fixed;
-    z-index: 200;
+    z-index: 90;
     background-color: $COLOR_WHITE;
     width: 100%;
     font-size: 14px;
